@@ -17,29 +17,7 @@ test_random_shuffle.$o:	CPPFLAGS += -DSTXXL_VERBOSE_LEVEL=0
 test_stable_ksort_all_parameters.$o:	CPPFLAGS += -DSTXXL_VERBOSE_STABLE_KSORT=STXXL_VERBOSE0 -DSTXXL_VERBOSE_LEVEL=0 -DSTXXL_CHECK_ORDER_IN_SORTS
 
 
-ifeq ($(strip $(USE_PMODE)),yes)
-# ICPC 12.0: internal error: backend signals (issue 613286)
-$(call reduce_optimization,3,0,test_sort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_ksort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_stable_ksort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_bad_cmp,Version_12.0,any,any)
-$(call reduce_optimization,3,0,sort_file,Version_12.0,any,any)
-$(call reduce_optimization,3,0,copy_and_sort_file,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_parallel_sort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_stable_ksort_all_parameters,Version_12.0,any,any)
-endif
-
 ifeq ($(strip $(USE_MCSTL)),yes)
-# ICPC 12.0: internal error: backend signals (issue 613286)
-$(call reduce_optimization,3,0,test_sort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_ksort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_stable_ksort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_bad_cmp,Version_12.0,any,any)
-$(call reduce_optimization,3,0,sort_file,Version_12.0,any,any)
-$(call reduce_optimization,3,0,copy_and_sort_file,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_parallel_sort,Version_12.0,any,any)
-$(call reduce_optimization,3,0,test_stable_ksort_all_parameters,Version_12.0,any,any)
-
 # ICPC 11.0: internal error: 0_1374 (issue 539748)
 $(call reduce_optimization,3,0,test_sort,Version_11.0,any,any)
 $(call reduce_optimization,3,0,test_ksort,Version_11.0,any,any)
